@@ -10,41 +10,41 @@ module ActiveMerchant
       
       # The first is the label, and the last is the code
       def self.shipping_methods
-        ActiveSupport::OrderedHash.new(
-          [ ["UPS Ground Shipping", "Ground"],
-            ["UPS Standard Shipping (Canada Only)", "Standard"],
-            ["UPS 3-Business Day", "3-Day Select"],
-            ["UPS 2-Business Day", "2nd Day Air"],
-            ["UPS 2-Business Day AM", "2nd Day Air AM"],
-            ["UPS Next Day", "Next Day Air"],
-            ["UPS Next Day Saver", "Next Day Air Saver"],
-            ["UPS Next Day Early AM", "Next Day Air Early AM"],
-            ["UPS Worldwide Express (Next Day)", "Worldwide Express"],
-            ["UPS Worldwide Expedited (2nd Day)", "Worldwide Expedited"],
-            ["UPS Worldwide Express Saver", "Worldwide Express Saver"],
-            ["FedEx Priority Overnight", "FedEx Priority Overnight"],
-            ["FedEx Standard Overnight", "FedEx Standard Overnight"],
-            ["FedEx First Overnight", "FedEx First Overnight"],
-            ["FedEx 2nd Day", "FedEx 2nd Day"],
-            ["FedEx Express Saver", "FedEx Express Saver"],
-            ["FedEx International Priority", "FedEx International Priority"],
-            ["FedEx International Economy", "FedEx International Economy"],
-            ["FedEx International First", "FedEx International First"],
-            ["FedEx Ground", "FedEx Ground"],
-            ["USPS Priority Mail & Global Priority Mail", "Priority"],
-            ["USPS First Class Mail", "First Class"],
-            ["USPS Express Mail & Global Express Mail", "Express"],
-            ["USPS Parcel Post", "Parcel"],
-            ["USPS Air Letter Post", "Air Letter Post"],
-            ["USPS Media Mail", "Media Mail"],
-            ["USPS Economy Parcel Post", "Economy Parcel"],
-            ["USPS Economy Air Letter Post", "Economy Letter"],
-            ["DHL Express", "DHL Express"],
-            ["DHL Next Afternoon", "DHL Next Afternoon"],
-            ["DHL Second Day Service", "DHL Second Day Service"],
-            ["DHL Ground", "DHL Ground"],
-            ["DHL International Express", "DHL International Express"] ]
-          )
+        [ 
+          ["UPS Ground Shipping", "Ground"],
+          ["UPS Standard Shipping (Canada Only)", "Standard"],
+          ["UPS 3-Business Day", "3-Day Select"],
+          ["UPS 2-Business Day", "2nd Day Air"],
+          ["UPS 2-Business Day AM", "2nd Day Air AM"],
+          ["UPS Next Day", "Next Day Air"],
+          ["UPS Next Day Saver", "Next Day Air Saver"],
+          ["UPS Next Day Early AM", "Next Day Air Early AM"],
+          ["UPS Worldwide Express (Next Day)", "Worldwide Express"],
+          ["UPS Worldwide Expedited (2nd Day)", "Worldwide Expedited"],
+          ["UPS Worldwide Express Saver", "Worldwide Express Saver"],
+          ["FedEx Priority Overnight", "FedEx Priority Overnight"],
+          ["FedEx Standard Overnight", "FedEx Standard Overnight"],
+          ["FedEx First Overnight", "FedEx First Overnight"],
+          ["FedEx 2nd Day", "FedEx 2nd Day"],
+          ["FedEx Express Saver", "FedEx Express Saver"],
+          ["FedEx International Priority", "FedEx International Priority"],
+          ["FedEx International Economy", "FedEx International Economy"],
+          ["FedEx International First", "FedEx International First"],
+          ["FedEx Ground", "FedEx Ground"],
+          ["USPS Priority Mail & Global Priority Mail", "Priority"],
+          ["USPS First Class Mail", "First Class"],
+          ["USPS Express Mail & Global Express Mail", "Express"],
+          ["USPS Parcel Post", "Parcel"],
+          ["USPS Air Letter Post", "Air Letter Post"],
+          ["USPS Media Mail", "Media Mail"],
+          ["USPS Economy Parcel Post", "Economy Parcel"],
+          ["USPS Economy Air Letter Post", "Economy Letter"],
+          ["DHL Express", "DHL Express"],
+          ["DHL Next Afternoon", "DHL Next Afternoon"],
+          ["DHL Second Day Service", "DHL Second Day Service"],
+          ["DHL Ground", "DHL Ground"],
+          ["DHL International Express", "DHL International Express"]
+        ].inject(ActiveSupport::OrderedHash.new){|h, (k,v)| h[k] = v; h}
       end
       
       # Pass in the login and password for the shipwire account.
