@@ -1,3 +1,4 @@
+* Use a Rails 2.3 compatible OrderedHash [cody]
 * Use :words_connector instead of connector in RequiresParameters [cody]
 * Provide Webgistix with a valid test sku to keep remote tests passing
 * Update PostsData to support get requests
